--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-default navbar-fixed-bottom">
   <div class="container">
-    <p class="navbar-text pull-left">© 2024 Reems
+    <p class="navbar-text pull-left">© 2024 Reems  - Powered by Jekyll & Dumbarton
        <!-- <a href="https://github.com/tcbutler320/Jekyll-Theme-Dumbarton" target="_blank" >GitHub</a> -->
     </p>
     <p class="navbar-text pull-right">
