--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@ layout: default
         <img src="{{ site.profile_image }}" class="img-thumbnail float-left" alt="...">
       {% endif %}
     </div>
-    <!-- EDUCATION SECTION -->
+    <!-- EDUCATION SECTION
     <div class="col-md-8">
       {% if site.animate %}
       <div class="card-body animate__animated animate__fadeInRight" style="color:{{theme.education-font-color}};">
@@ -46,10 +46,10 @@ layout: default
     </div>
   </div>
 </div>
-
+ -->
 <!-- style="font-family:{{ theme.link-font }};background-color:{{ theme.nav-color }}; -->
 
-<!-- HOME HIGHLIGHTS SECTION 
+<!-- HOME HIGHLIGHTS SECTION --> 
 {% if site.animate %}
 <div class="card mx-auto animate__animated animate__slideInUp animate__delay-1s glowing-border" style="max-width: 100%;">
 {% else %}
@@ -147,7 +147,7 @@ layout: default
       </div>
   </div>
 </div>
---> 
+
 
 
 <!-- ANIMATE.JS ANIMATE LIBRARY
