--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,16 +1,32 @@
- {% assign theme = site.data.themes[site.ui_theme] %}
-  <h5 class="card-title" style="font-family:{{ theme.education-title-font}};font-size:{{ theme.education-title-size }};color:{{theme.education-font-color}};">Education & Certifications</h5>
-  <ul class="list-unstyled">
+{% assign theme = site.data.themes[site.ui_theme] %} 
+<h5 class="card-title" style="font-family:{{ theme.education-title-font}};font-size:{{ theme.education-title-size }};color:{{theme.education-font-color}};">Education</h5>
+<ul class="list-unstyled">
   {% for entry in site.data.education %}
-    <li class="media">
-      <img src="{{ entry.Icon }}" class="mr-3" alt="...">
-      <div class="media-body">
-        <h5 style="font-family:{{ theme.education-entry-font}};font-size:{{ theme.education-entry-size }};color:{{theme.education-font-color}};">{{ entry.School }}</h5>
-        <p style="font-family:{{ theme.education-entry-font}};font-size:{{ theme.education-section-size }};color:{{theme.education-font-color}};"><i>{{ entry.Program }}</i></p>
-        {% if entry.Degree %}
-          <p>{{ entry.Degree }}</p>
+  <li class="media">
+    <img src="{{ entry.Degree.Icon }}" class="img-fluid" style="aspect-ratio: auto; height: 67px;"alt="Icon for {{ entry.School }}">
+    <div class="media-body">
+      <h5 style="font-family:{{ theme.education-entry-font}};font-size:{{ theme.education-entry-size }};color:{{theme.education-font-color}};">{{ entry.School }}</h5>
+      <p style="font-family:{{ theme.education-entry-font}};font-size:{{ theme.education-section-size }};color:{{theme.education-font-color}};"><i>{{ entry.Degree.Program | replace: '<br>', '<br>' }}</i><br>
+        {% if entry.Degree.Advisors %}
+          Advisor: 
+          {% for advisor in entry.Degree.Advisors %}
+            <a href="{{ advisor.Link }}" target="_blank">{{ advisor.Name }}</a>{% unless forloop.last %} & {% endunless %}
+          {% endfor %}
+          <br>
         {% endif %}
-      </div>
-    </li>
-    {% endfor %}
-  </ul>
+        {{ entry.Degree.StartDate }} - {{ entry.Degree.EndDate }}
+      </p>
+      {% if entry.Degree.Degree %}
+        <p>{{ entry.Degree.Degree }}</p>
+      {% endif %}
+    </div>
+  </li>
+  {% endfor %}
+</ul>
+<style>
+  h1 {
+    color: blue;
+    font-family: verdana;
+    font-size: 300%;
+  }
+</style>
