--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@ layout: default
       {% if site.animate %}
         <img src="{{ site.profile_image }}" class="img-thumbnail float-left animate__animated animate__fadeInLeft shadow bg-white rounded" alt="...">
       {% else %}
-        <img src="{{ site.profile_image }}" class="img-thumbnail float-left" alt="...">
+        <img src="{{ site.profile_image }}" class="img-thumbnail float-left" alt="..." style="border-radius:50%; width:150px; height:150px; object-fit:cover; border: 3px solid #149f98;"/>
       {% endif %}
     </div>
     <!-- EDUCATION SECTION -->
