--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: default
     </button>
   </div>
   <div class="toast-body">
-    Thanks for checking out Jekyll-Theme-Dumbarton ! This theme was developed by <a href="https://twitter.com/tbutler0x90">Tyler Butler</a>. If you're interested in using this in your own website, checkout the project on <a href="https://github.com/tcbutler320/Jekyll-Theme-Dumbarton">Github</a>
+    Thanks for checking out Jekyll-Theme-Dumbarton ! This theme was developed by Tyler Butler</a>. If you're interested in using this in your own website, checkout the project on <a href="https://github.com/tcbutler320/Jekyll-Theme-Dumbarton">Github</a>
   </div>
 </div>
 {% endif %}
@@ -28,7 +28,7 @@ layout: default
       {% if site.animate %}
         <img src="{{ site.profile_image }}" class="img-thumbnail float-left animate__animated animate__fadeInLeft shadow bg-white rounded" alt="...">
       {% else %}
-        <img src="{{ site.profile_image }}" class="img-thumbnail float-left" alt="..." style="border-radius:50%; width:150px; height:150px; object-fit:cover; border: 3px solid #149f98;"/>
+        <img src="{{ site.profile_image }}" class="img-thumbnail float-left" alt="..." style="border-radius:50%; width:600px; height:300px; object-fit:cover; border: 3px solid #149f98;"/>
       {% endif %}
     </div>
     <!-- EDUCATION SECTION -->
