--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,7 +49,7 @@ layout: default
 
 <!-- style="font-family:{{ theme.link-font }};background-color:{{ theme.nav-color }}; -->
 
-<!-- HOME HIGHLIGHTS SECTION
+<!-- HOME HIGHLIGHTS SECTION  --> 
 {% if site.animate %}
 <div class="card mx-auto animate__animated animate__slideInUp animate__delay-1s glowing-border" style="max-width: 100%;">
 {% else %}
@@ -147,7 +147,7 @@ layout: default
       </div>
   </div>
 </div>
- --> 
+
 
 
 <!-- ANIMATE.JS ANIMATE LIBRARY
