--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,99 +55,143 @@ layout: default
 {% else %}
 <div class="card mx-auto mb-1 border-0"  style="max-width: 100%;">
 {% endif %}
-  <div class="card-header" style="background-color:{{ theme.home-highlight-background }};">
-    <ul class="nav nav-tabs card-header-tabs" id="test-list" role="tablist">
+<div class="card-header" style="background-color:{{ theme.home-highlight-background }}; overflow-x: auto; white-space: nowrap;">
+    <ul class="nav nav-tabs card-header-tabs" id="test-list" role="tablist" style="display: flex; flex-wrap: nowrap; overflow-y: hidden;scrollbar-width: thin;">
       {% for section in site.data.sections %}
-        {% if section.first %}
-          <li class="nav-item">
-            <a class="nav-link shadow-none" id="{{ section.jsid }}" href="#{{section.id}}" role="tab" aria-controls="{{section.id}}" aria-selected="true" style="font-family:{{ theme.font}};color:{{ theme.home-highlight-header-text}};">{{section.emoji}} {{section.name}}</a>
-          </li>
-        {% else %}
-          <li class="nav-item">
-              <a class="nav-link" id="{{ section.jsid }}" href="#{{section.id}}" role="tab" aria-controls="{{section.id}}" aria-selected="true" style="font-family:{{ theme.font}};color:{{ theme.home-highlight-header-text}};">{{section.emoji}} {{section.name}}</a>
-          </li>
-        {% endif %}
+        <li class="nav-item" style="flex: 0 0 auto;">
+          <a class="nav-link{% if section.first %} active{% endif %}" id="{{ section.jsid }}" href="#{{section.id}}" role="tab" aria-controls="{{section.id}}" aria-selected="true" style="font-family:{{ theme.font}};color:{{ theme.home-highlight-header-text}};">{{section.emoji}} {{section.name}}</a>
+        </li>
       {% endfor %}
     </ul>
   </div>
   <div class="card-body">          
-      <div class="tab-content mt-3">
-        {% for section in site.data.sections %}
-          {% if section.first %}
-            {% if section.name == "Publications" %}
-              <div class="tab-pane active overflow-auto" id="{{section.id}}" role="tabpanel">
-                <p><i>{{section.description}}</i></p>
-                <p class="card-text">{% bibliography -f papers %}</p>
-              </div>
-            {% else %}
-              <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel">
-                <p class="card-text">{{section.description}}</p>
-              </div>
-            {% endif %}
-          {% else %}  
-            {% if section.name == "Presentations" %}
-              <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
-                <p><i>{{section.description}}</i></p>
-                <p class="card-text">{% bibliography -f presentations %}</p>              
-              </div>
-            {% elsif section.name == "Projects" %}
-              <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
-                <p><i>{{section.description}}</i></p>
-                  {% for projects in site.data.projects %}
-                  <div class="media mt-2">
-                    <a href="{{ projects.link }}"><img src="{{ projects.image }}" class="mr-3 mb-2 img-thumbnail border-0" alt="..."></a>
-                    <div class="media-body">
-                      <h5 class="mt-0"><a href="{{ projects.link }}" class="highlighted">{{ projects.name }}</a></h5>
-                      {{ projects.description }}
-                      {% if projects.tech %}
-                        <h6><mark><u>Technologies</u></mark></h6>
-                        {% for tech in projects.tech %}
-                        <span class="badge badge-secondary mr-1" style="background-color:{{ theme.projects-color }};">{{ tech }}</span>
-                        {% endfor %}
-                      {% endif %}
+    <div class="tab-content mt-3">
+      {% for section in site.data.sections %}
+        {% if section.first %}
+          {% if section.name == "Publications" %}
+            <div class="tab-pane active" id="{{section.id}}" role="tabpanel">
+              <p><i>{{section.description}}</i></p>
+              <p class="card-text2">{% bibliography -f papers %}</p>
+            </div>
+          {% else %}
+            <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel">
+              <p class="card-text">{{section.description}}</p>
+            </div>
+          {% endif %}
+        {% else %}  
+          {% if section.name == "Presentations" %}
+            <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
+              <p><i>{{section.description}}</i></p>
+              <p class="card-text">{% bibliography -f presentations %}</p>              
+            </div>
+          {% elsif section.name == "Projects" %}
+            <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
+              <p><i>{{section.description}}</i></p>
+                {% for projects in site.data.projects %}
+                <div class="media mt-2">
+                  <a href="{{ projects.link }}"><img src="{{ projects.image }}" class="mr-3 mb-2 img-thumbnail border-0" alt="..."></a>
+                  <div class="media-body">
+                    <h5 class="mt-0"><a href="{{ projects.link }}" class="highlighted">{{ projects.name }}</a></h5>
+                    <p>{{ projects.date }}</p>
+                    {{ projects.description }}
+                    {% if projects.tech %}
+                      <h6><mark><u>Technologies</u></mark></h6>
+                      {% for tech in projects.tech %}
+                      <span class="badge badge-secondary mr-1" style="background-color:{{ theme.projects-color }};">{{ tech }}</span>
+                      {% endfor %}
+                    {% endif %}
+                  </div>
+                </div>
+                {% endfor %}
+            </div>
+          {% elsif section.name == "Writing Samples" %}
+            <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
+              <p><i>{{section.description}}</i></p>
+                {% for writing_sample in site.data.writingsamples %}
+                <div class="media mt-2">
+                  <div class="media-body">
+                    <h5 class="mt-0"><a href="{{ writing_sample.link }}" class="highlighted">{{ writing_sample.name }}</a></h5>
+                    <p>{{ writing_sample.date }}</p>
+                    <p>{{ writing_sample.description }}</p>
+                    {% if writing_sample.Skills %}
+                      <h6><mark><u>Topics Involved</u></mark></h6>
+                      {% for topic in writing_sample.Skills %}
+                      <span class="badge badge-secondary mr-1" style="background-color:{{ theme.projects-color }};">{{ topic }}</span>
+                      {% endfor %}
+                    {% endif %}
+                  </div>
+                </div>
+                {% endfor %}
+            </div>
+          {% elsif section.name == "Academic Experience" %}
+            <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
+              <p><i>{{section.description}}</i></p>
+                  {% for courses in site.data.acaex %}
+                  <div class="list-group">
+                    <div class="list-group-item list-group-item-action">
+                      <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1">{{ courses.Role }}</h5>
+                        <p>{{ courses.Class }}</p>
+                        <small>{{ courses.StartDate }} - {{ courses.EndDate }}</small>
+                      </div>
+                      <p class="mb-1">{{ courses.description }}</p>
+                      <small>{{ courses.Department }}</small>
                     </div>
                   </div>
                   {% endfor %}
-                </div>        
-              </div>
-            {% elsif section.name == "Teaching" %}
-              <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
-                <p><i>{{section.description}}</i></p>
-                    {% for courses in site.data.teaching %}
-                    <div class="list-group">
-                      <div class="list-group-item list-group-item-action">
-                        <div class="d-flex w-100 justify-content-between">
-                          <h5 class="mb-1">{{ courses.Schoool }}</h5>
-                          <p>{{ courses.Program }}</p>
-                          <small>{{ courses.StartDate }} - {{ courses.EndDate }}</small>
-                        </div>
-                        <p class="mb-1">{{ courses.description }}</p>
-                        <small>{{ courses.Department }}</small>
+            </div>
+            {% elsif section.name == "Research Experience" %}
+            <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
+              <p><i>{{section.description}}</i></p>
+                  {% for research in site.data.resex %}
+                  <div class="list-group">
+                    <div class="list-group-item list-group-item-action">
+                      <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1">{{ research.University }}</h5>
+                        <p>{{ research.Role }}</p>
+                        <small>{{ research.StartDate }} - {{ research.EndDate }}</small>
                       </div>
+                      <p class="mb-1">{{ research.description }}</p>
+                      <small>{{ research.Department }}</small>
                     </div>
-                    {% endfor %}
+                  </div>
+                  {% endfor %}
+            </div>
+          {% elsif section.name == "Research Interests" %}
+            <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
+              <p><i>{{section.description}}</i></p>
+              <div class="list-group">
+              {% for topic in site.data.researchinterest %}
+                <button type="button" class="list-group-item text-left">{{ topic.Topic }}</button>
+              {% endfor %}
               </div>
+            </div>
             {% elsif section.name == "Coursework" %}
-              <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
-                <p><i>{{section.description}}</i></p>
-                <div class="list-group">
-                {% for courses in site.data.courses %}
-                  <button type="button" class="list-group-item text-left">{{ courses.Course }}</button>
-                {% endfor %}
+            <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">
+              <div class="list-group">
+              {% for course in site.data.courses %}
+              <div class="list-group">
+                <div class="list-group-item list-group-item-action">
+                  <div class="d-flex w-100 justify-content-between">
+                    <h5 class="mb-1">{{ course.School }}</h5>
+                    <p>{{course.Number}}: {{course.Course }}</p>
+                    <small>{{course.Semester}}</small>
+                  </div>
                 </div>
               </div>
-            {% else %}
-              <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
-                <h5 class="card-title text-center"><a href="/{{ section.url }}" class="highlighted">{{section.description}}</a></h5>
-                <p class="card-text">{{ section.content }} </p>              
+              {% endfor %}
               </div>
-            {% endif %}
+            </div>
+          {% else %}
+            <div class="tab-pane overflow-auto" id="{{section.id}}" role="tabpanel" aria-labelledby="{{section.id}}-tab">  
+              <h5 class="card-title text-center"><a href="/{{ section.url }}" class="highlighted">{{section.description}}</a></h5>
+              <p class="card-text">{{ section.content }} </p>              
+            </div>
           {% endif %}
-        {% endfor %}
-      </div>
-  </div>
+        {% endif %}
+      {% endfor %}
+    </div>
 </div>
-
 
 
 <!-- ANIMATE.JS ANIMATE LIBRARY
