--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -1,25 +1,49 @@
-<div class="bd-example" style:"position: relative; overflow-y: scroll;">
+<!-- Timeline Start -->
+
+<section
+  id="{{ page.section-type }}"
+  class="container content-section text-center"
+>
   <div class="row">
-    <div class="col-4">
-      <div id="list-example" class="list-group">
-        <a class="list-group-item list-group-item-action active" href="#list-item-1">Item 1</a>
-        <a class="list-group-item list-group-item-action" href="#list-item-2">Item2</a>
-        <a class="list-group-item list-group-item-action" href="#list-item-3">Item 3</a>
-        <a class="list-group-item list-group-item-action" href="#list-item-4">Item 4</a>
-      </div>
-    </div>
-    <div class="col-8">
-      <div data-spy="scroll" data-target="#list-example" data-offset="0" class="scrollspy-example">
-        <h4 id="list-item-1">Item 1</h4>
-        <p>Ex consequat commodo adipisicing exercitation aute excepteur occaecat ullamco duis aliqua id magna ullamco eu. Do aute ipsum ipsum ullamco cillum consectetur ut et aute consectetur labore. Fugiat laborum incididunt tempor eu consequat enim dolore proident. Qui laborum do non excepteur nulla magna eiusmod consectetur in. Aliqua et aliqua officia quis et incididunt voluptate non anim reprehenderit adipisicing dolore ut consequat deserunt mollit dolore. Aliquip nulla enim veniam non fugiat id cupidatat nulla elit cupidatat commodo velit ut eiusmod cupidatat elit dolore.</p>
-        <h4 id="list-item-2">Item 2</h4>
-        <p>Quis magna Lorem anim amet ipsum do mollit sit cillum voluptate ex nulla tempor. Laborum consequat non elit enim exercitation cillum aliqua consequat id aliqua. Esse ex consectetur mollit voluptate est in duis laboris ad sit ipsum anim Lorem. Incididunt veniam velit elit elit veniam Lorem aliqua quis ullamco deserunt sit enim elit aliqua esse irure. Laborum nisi sit est tempor laborum mollit labore officia laborum excepteur commodo non commodo dolor excepteur commodo. Ipsum fugiat ex est consectetur ipsum commodo tempor sunt in proident.</p>
-        <h4 id="list-item-3">Item 3</h4>
-        <p>Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco est ex ullamco excepteur.</p>
-        <h4 id="list-item-4">Item 4</h4>
-        <p>Quis anim sit do amet fugiat dolor velit sit ea ea do reprehenderit culpa duis. Nostrud aliqua ipsum fugiat minim proident occaecat excepteur aliquip culpa aute tempor reprehenderit. Deserunt tempor mollit elit ex pariatur dolore velit fugiat mollit culpa irure ullamco est ex ullamco excepteur.</p>
-      </div>
+    <div class="col-md-10 col-md-offset-1">
+      {{ page.content | markdownify }}
+
+      <ul class="timeline">
+        {% for event in site.events %} {% assign loopindex = forloop.index |
+        modulo: 2 %} {% capture class %} {% if loopindex == 0 %}
+        timeline-inverted {% endif %} {% endcapture %}
+
+        <li class="{{ class }}">
+          <div class="timeline-image">
+            <img
+              class="img-circle img-responsive"
+              src="{{site.baseurl}}{{ event.image }}"
+              alt=""
+            />
+          </div>
+          <div class="timeline-panel">
+            <div class="timeline-heading">
+              <h4>{{ event.date }}</h4>
+            </div>
+            <div class="timeline-body">
+              {{ event.description | markdownify }}
+            </div>
+          </div>
+        </li>
+        {% endfor %}
+
+        <li class="timeline-inverted">
+          <div class="timeline-image">
+            <img
+              class="img-circle img-responsive"
+              src="{{site.baseurl}}{{ site.timeline-img }}"
+              alt=""
+            />
+          </div>
+        </li>
+      </ul>
     </div>
   </div>
-</div>
+</section>
 
+<!-- Timeline End -->
