--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -1,5 +1,5 @@
 <!-- Timeline Start -->
-
+{% assign theme = site.data.themes[site.ui_theme] %} 
 <section
   id="{{ page.section-type }}"
   class="container content-section text-center"
