--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@ layout: default
         <img src="{{ site.profile_image }}" class="img-thumbnail float-left" alt="..." style="border-radius:50%; width:300px; height:200px; object-fit:cover; border: 3px solid #149f98;"/>
       {% endif %}
     </div>
-    <!-- EDUCATION SECTION -->
+    <!-- SECTION -->
     <div class="col-md-8">
       {% if site.animate %}
       <div class="card-body animate__animated animate__fadeInRight" style="color:{{theme.education-font-color}};">
