--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -19,16 +19,16 @@
           <div class="timeline-image">
             <img
               class="img-circle img-responsive"
-              src="{{site.baseurl}}{{ event.image }}"
+              src="{{site.baseurl}}{{ event.events.image }}"
               alt=""
             />
           </div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4>{{ event.date }}</h4>
+              <h4>{{ event.events.date }}</h4>
             </div>
             <div class="timeline-body">
-              {{ event.description | markdownify }}
+              {{ event.events.description | markdownify }}
             </div>
           </div>
         </li>
