--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -19,7 +19,7 @@
           <div class="timeline-image">
             <img
               class="img-circle img-responsive"
-              src="{{ event.image }}"
+              src="{{site.baseurl}}{{ event.image }}"
               alt=""
             />
           </div>
