--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -9,7 +9,7 @@ last-updated: 2024-07-16 10:12 AM
     <!-- Profile Section -->
     <div class="profile-section" style="text-align:center; margin-bottom:20px;">
         <!-- Profile Image -->
-        <img src="/assets/img/avatar/me.jpg" alt="Reems" style="border-radius:50%; width:150px; height:150px; object-fit:cover; border: 3px solid #149f98;"/>
+        <img src="/assets/img/avatar/me.jpg" alt="Reems" class="img-circle"/>
         <h1>Reems</h1>
         <p>PM</p>
     </div>
