--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,15 @@ a.highlighted:hover {
 }
 
 /* Styling */
+
+.img-circle{
+    border-radius:50%; 
+    width:150px; 
+    height:150px; 
+    object-fit:cover; 
+    border: 3px solid #149f98;
+}
+    
 .timeline {
   margin: 4em auto;
   position: relative;
