--- a/css/main.css
+++ b/css/main.css
@@ -77,8 +77,8 @@ a.highlighted:hover {
 .img-circle{
     border-radius: 50%;
     transform: scale(0.9);
-   /* width:150px; 
-    height:150px; */
+    max-width:150px; 
+    max-height:150px;
     background-size: cover;
     background-position: center;
     object-fit:cover; 
