--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ a.highlighted:hover {
 .img-circle{
     border-radius:50%;
     height:100%;
+    width:50%;
     max-width:150px; 
     max-height:150px;
     position: relative;
