--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,21 @@
   to consistently ensure proper document rendering.
   Any other head element should come *after* these tags.
  -->
-<title>{{ site.title }}</title>
- 
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="description" content="{{site.description}}" />
+<meta name="author" content="{{site.author}}" />
+<meta name="keywords" content="{{site.keywords}}" />
+
+<!-- copied-->
+<link
+    rel="canonical"
+    href="{{page.url | replace:'index.html','' | prepend: site.baseurl}}"
+/>
+
+<!--<title>{{ site.title }}</title>-->
+<title>{{site.title}}{% if page.title %} | {{page.title}}{% endif %}</title>
+
 <!-- Set the base URL for all relative URLs within the document -->
 <base href="{{ site.url }}">
 
@@ -76,6 +89,13 @@
 
 <!-- For IE 10 and below -->
 <!-- Place favicon.ico in the root directory - no tag necessary -->
+<!--{% if site.favicon %}
+  <link
+    rel="shortcut icon"
+    type="image/x-icon"
+    href="{{site.baseurl}}{{site.favicon}}"
+  />
+  {% endif %}-->
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/icons/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/icons/favicon-16x16.png">
