--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% assign theme = site.data.themes[site.ui_theme] %}
-<html>
+<html lang="{{ site.lang }}">
   {% include head.html %}
   <body style="background-color:{{theme.background-color}};">
     {% include nav.html %}
