--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <!-- Intro Start -->
 
-<header class="intro">
+<header class="intro" style="background-img:{{site.background-img}}">
   <div class="intro-body">
     <div class="container">
       <div class="row">
