remove background-image
 style="background: url({{site.background-img}}) no-repeat bottom center scroll"

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <!-- Intro Start -->
 
-<header class="intro" style="background: url({{site.background-img}}) no-repeat bottom center scroll">
+<header class="intro">
   <div class="intro-body">
     <div class="container">
       <div class="row">
