--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,14 +2,13 @@
 {% assign theme = site.data.themes[site.ui_theme] %}
 <html lang="{{ site.lang }}">
   {% include head.html %}
-  {% include header.html %}
+ <!-- {% include header.html %}-->
   <body style="background-color:{{theme.background-color}};">
     {% include nav.html %}
     <div class="dumbarton-spacer-sm"></div>
     <div class="container">
       {{ content }}
     </div>
-    <div class="dumbarton-spacer"></div>
     {% include footer.html %}
   </body>
 </html>
