--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,8 +41,7 @@ layout: default
         <p style="color:{{theme.education-font-color}};">{{ content | markdownify}}<p>
         {% if site.home_option == "education" %}
           {% include education.html %}
-        {% endif %}
-        {% if site.home_option == "timeline" %}
+        {% elsif site.home_option == "timeline" %}
           {% include timeline.html %}
         {% endif %}
       </div>
@@ -53,7 +52,7 @@ layout: default
 <!-- style="font-family:{{ theme.link-font }};background-color:{{ theme.nav-color }}; -->
 
 <!-- HOME HIGHLIGHTS SECTION  --> 
-{% if site.animate %}
+{% if site.animate && site.home_option == "education" %}
 <div class="card mx-auto animate__animated animate__slideInUp animate__delay-1s glowing-border" style="max-width: 100%;">
 {% else %}
 <div class="card mx-auto mb-1 border-0"  style="max-width: 100%;">
