Revert "Update home.html else for theme"
This reverts commit 1ac7c63baeccc2de9e27765c2352edd2636221ea.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,7 +41,8 @@ layout: default
         <p style="color:{{theme.education-font-color}};">{{ content | markdownify}}<p>
         {% if site.home_option == "education" %}
           {% include education.html %}
-        {% elsif site.home_option == "timeline" %}
+        {% endif %}
+        {% if site.home_option == "timeline" %}
           {% include timeline.html %}
         {% endif %}
       </div>
@@ -52,7 +53,7 @@ layout: default
 <!-- style="font-family:{{ theme.link-font }};background-color:{{ theme.nav-color }}; -->
 
 <!-- HOME HIGHLIGHTS SECTION  --> 
-{% if site.animate && site.home_option == "education" %}
+{% if site.animate %}
 <div class="card mx-auto animate__animated animate__slideInUp animate__delay-1s glowing-border" style="max-width: 100%;">
 {% else %}
 <div class="card mx-auto mb-1 border-0"  style="max-width: 100%;">
