--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -19,16 +19,16 @@
           <div class="timeline-image">
             <img
               class="img-circle img-responsive"
-              src="{{site.baseurl}}{{ event.acad-events.image }}"
+              src="{{site.baseurl}}{{ event.image }}"
               alt=""
             />
           </div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4>{{ event.acad-events.date }}</h4>
+              <h4>{{ event.date }}</h4>
             </div>
             <div class="timeline-body">
-              {{ event.acad-events.description | markdownify }}
+              {{ event.description | markdownify }}
             </div>
           </div>
         </li>
@@ -38,7 +38,7 @@
           <div class="timeline-image">
             <img
               class="img-circle img-responsive"
-              src="{{site.baseurl}}{{ site.timeline.timeline-img }}"
+              src="{{site.baseurl}}{{ site.data.timeline.timeline-img }}"
               alt=""
             />
           </div>
