Update main.css     margin-top: 0.2rem;
.img-circle{
    border-radius:50%;
    height:100%;
    width:100%;
    max-width:150px; 
    max-height:150px;
    position: relative;
    object-fit:cover; 
    border: 3px solid #149f98;
    margin-top: 0.2rem;

--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,7 @@ a.highlighted:hover {
     position: relative;
     object-fit:cover; 
     border: 3px solid #149f98;
+    margin-top: 0.2rem;
 }
     
 .timeline {
