--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -38,7 +38,7 @@
           <div class="timeline-image">
             <img
               class="img-circle img-responsive"
-              src="{{site.baseurl}}{{ site.timeline.timeline-img }}"
+              src="{{site.baseurl}}{{ site.data.timeline.timeline-img }}"
               alt=""
             />
           </div>
