--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   <div class="container text-center">
     {% include social-footer.html %}
     <br></br>
-    <p>Copyright &copy; {{ site.author }} {{ site.time | date: "%Y" }} - Powered by Jekyll & Dumbarton</p>
+    <p>Copyright &copy; {{ site.author }} {{ site.time | date: "%Y" }}</p>
   </div>
 </footer>
 
