--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,10 @@
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densityDpi=device-dpi" />
+<meta name="viewport" 
+  content="width=device-width, 
+  initial-scale=1.0, 
+  maximum-scale=1.0, 
+  minimum-scale=1.0, 
+  user-scalable=no" />
 <!--
   The above 2 meta tags *must* come first in the <head>
   to consistently ensure proper document rendering.
