--- a/css/main.css
+++ b/css/main.css
@@ -854,6 +854,7 @@ $font-family: Proxima, Helvetica, Arial, sans-serif;
     width: 100%;
     padding: 0 20px 20px 30px;
     margin-left: 50%;
+    margin-right: 50%;
   }
 
   .timeline > li .timeline-image {
