--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -29,6 +29,7 @@
             </div>
             <div class="timeline-body">
               {{ event.description | markdownify }}
+              <i>{{ event.description | markdownify }}</i>
             </div>
           </div>
         </li>
