--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -25,10 +25,10 @@
           </div>
           <div class="timeline-panel">
             <div class="timeline-heading">
-              <h4>{{ event.date }}</h4>
+              <h5>{{ event.date }}</h5>
             </div>
             <div class="timeline-body">
-              <i>{{ event.institute | markdownify }}</i>
+              <h6>{{ event.institute | markdownify }}</h6>
               {{ event.description | markdownify }}
             </div>
           </div>
