--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -28,8 +28,8 @@
               <h5>{{ event.date }}</h5>
             </div>
             <div class="timeline-body">
-              <h6>{{ event.institute | markdownify }}</h6>
-              {{ event.description | markdownify }}
+              <h6>{{ event.institute }}</h6>
+              <i>{{ event.description }}</i>
             </div>
           </div>
         </li>
