--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -28,7 +28,7 @@
               <h5>{{ event.date }}</h5>
             </div>
             <div class="timeline-body">
-              <h6>{{ event.institute }}</h6>
+              <h6>{{ event.institute }}</h6>  <!-- | markdownify -->
               <i>{{ event.description }}</i>
             </div>
           </div>
