--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -29,7 +29,9 @@
             </div>
             <div class="timeline-body">
               <h6>{{ event.institute }}</h6>  <!-- | markdownify -->
-              <i>{{ event.description }}</i>
+              {% for line in event.description %}
+                {{ line }}<br>
+              {% endfor %}
             </div>
           </div>
         </li>
