--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -10,7 +10,7 @@
     <div class="col-md-10 col-md-offset-1">
       {{ page.content | markdownify }}
 -->
-      <ul class="timeline">
+      <ul class="timeline col-md-4 col-lg-4 col-sm-4">
         {% for event in site.data.timeline %} {% assign loopindex = forloop.index |
         modulo: 2 %} {% capture class %} {% if loopindex == 0 %}
         timeline-inverted {% endif %} {% endcapture %}
