--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -32,9 +32,9 @@
               {{ event.description }}
               <ul>
                 {% for entry in event.content %}
-                    {% for list in event.content.data %}
-                        <li>{{ entry }} - {{ list }}</li>
-                          {% for sublist in event.content.data.item %}
+                    {% for list in entry %}
+                        <li> {{ list }}</li>
+                          {% for sublist in list %}
                             <li><i>{{ sublist }}</i></li>
                           {% endfor %}
                     {% endfor %}
