--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -34,6 +34,9 @@
                 {% for content in event.content %}
                     {% for data in content.data %}
                         <li> {{ data }} </li>
+                        {% for item in content.item %}
+                            <li> {{ item }} </li>
+                        {% endfor %}
                     {% endfor %}
                 {% endfor %}
               </ul>
