--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -30,13 +30,13 @@
             <div class="timeline-body">
               <h6>{{ event.institute }}</h6>  <!-- | markdownify -->
               {{ event.description }}
-              <ul>
+              <ul style=" font-size: 90%;">
                 {% for content in event.content %}
                     {% for data in content.data %}                       
                         <li> {{ data }} </li>
                         <ul>
                         {% for item in content.item %}
-                           <li> {{ item }} </li>
+                           <li><i> {{ item }} </i></li>
                         {% endfor %}
                         </ul>
                     {% endfor %}
