--- a/_includes/head.html
+++ b/_includes/head.html
@@ -158,7 +158,7 @@
   src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.7/typed.min.js"
 ></script>
 <script type="text/javascript">
-  $(".intro-text").typed({
+  $("#intro-text").typed({
     strings: ["{{ site.quote }}"],
     typeSpeed: 3,
     startDelay: 1000,
