Update head.html 151

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -148,7 +148,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '{{ site.google-tag }});
+ <!-- gtag('config', '{{ site.google-tag }});-->
 </script>
 
 <!-- Dynamic Typing Start -->
