--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,11 @@
     {% include nav.html %}
     <div class="dumbarton-spacer-sm"></div>
     <div class="container">
-      <div class="intro"><div class="intro-body">
-       <span id="intro-text" class="intro-text row"></span>
-      </div></div>
+      <div class="intro">
+        <div class="intro-body">
+          <span class="intro-text"></span>
+        </div>
+      </div>
       {{ content }}
     </div>
     {% include footer.html %}
