--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -33,9 +33,10 @@ layout: default
       </div>       
     </div>
 
+    <!-- dynamic text -->
     <div class="intro">
         <div class="intro-body">
-          <span class="intro-text"></span>
+          <span class="intro-text" style="font-family:Courgette;"></span>
         </div>
     </div>  
   </div>
