--- a/css/main.css
+++ b/css/main.css
@@ -976,6 +976,9 @@ $font-family: Proxima, Helvetica, Arial, sans-serif;
   height: auto;
   padding: 100px 0;
   text-align: center;
+  color: #fff;
+  background: url(../img/intro-bg.gif) no-repeat bottom center scroll;
+  background-color: #000;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
