--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,7 +34,7 @@ layout: default
     </div>
 
     <!-- dynamic text -->
-        <div class="intro-body">
+        <div class="intro intro-body">
           <span class="intro-text" style="font-family:Courgette;"></span>
         </div>
   </div>
