--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ layout: default
         
       </div>       
     </div>
-
+    </div>
     <!-- dynamic text -->
         <div class="intro intro-body">
           <span class="intro-text" style="font-family:Courgette;"></span>
